# ImagePiper

./: .gitignore  CMakeLists.txt  build.bat
Unity/: NamedPipeClient.cs
data/: data.txt
include/: image2string.h  imagepiper.h  pipeconfig.h  piper.h
src/: client.cpp  image2string.cpp  imagepiper.cpp  piper.cpp  server.cpp  stereopipe.hpp
